# VernaCopter

./: .gitignore  README.md  main.py  requirements-hardware.txt  requirements.txt
LLM/: NL_to_STL.py  voice_interpreter.py  voice_openai.py  voice_vad.py
LLM/instructions/: adjustment_instructions.txt  one_shot_ChatGPT_instructions.txt  voice_interpreter_instructions.txt
RA/: NL_to_Optimization.py  interactive_path_optimizer.py
STL/: STL_to_path.py  trajectory_analysis.py
basics/: config.py  scenarios.py
deployment/: deploy_and_visualizition_2d.py  deploy_online.py  deploy_online2.py  simulation_two_mode.py
drone_test/: interactive_drone_test.py  lib_test.py  plot_test.py  simple_drone_test.py  simple_drone_test_vicon.py
examples/: default_example.py  one_shot_automatic.py
libmotioncapture/: .gitignore  CMakeLists.txt  README.md  motioncapture.cp310-win_amd64.pyd  setup.py
libmotioncapture/.github/workflows/: CI.yml
libmotioncapture/include/libmotioncapture/: fzmotion.h  mock.h  motionanalysis.h
visuals/: pybullet_simulation.py  run_simulation.py  visualization.py
